Merge polaris-quarkus-service into polaris-quarkus-server